# michi

./: .gitignore  next.config.ts  package-lock.json  package.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src-tauri/src/commands/: db.rs  xp.rs
src/app/: client-layout.tsx  globals.css  layout.tsx  page.tsx
src/app/dojo/: page.tsx
src/app/immersion/: page.tsx
src/app/settings/: page.tsx
src/components/ui/: PageTransition.tsx  Sidebar.tsx
